Update Forecast of Aftershocks.ipynb

--- a/Forecast-of-aftershock/Forecast of Aftershocks.ipynb
+++ b/Forecast-of-aftershock/Forecast of Aftershocks.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 2,
    "id": "6e2d9bf4",
    "metadata": {
     "execution": {
@@ -373,7 +373,7 @@
        "[8 rows x 21 columns]"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,8 +388,8 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Uploading CSV files with training and test earthquake data\n",
-    "train = pd.read_csv('E:\\\\Alex\\\\Github\\\\Forecast-of-Aftershocks\\\\train.csv')\n",
-    "test = pd.read_csv('E:\\\\Alex\\\\Github\\\\Forecast-of-Aftershocks\\\\test.csv')\n",
+    "train = pd.read_csv('E:\\\\Alex\\\\Github\\\\my_projects\\\\Forecast-of-aftershock\\\\train.csv')\n",
+    "test = pd.read_csv('E:\\\\Alex\\\\Github\\\\my_projects\\\\Forecast-of-aftershock\\\\test.csv')\n",
     "\n",
     "# Displaying statistical summary of the training dataset\n",
     "train.describe()\n"
@@ -4328,7 +4328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": null,
    "id": "fccf0d07",
    "metadata": {},
    "outputs": [
@@ -4546,9 +4546,9 @@
     "#reating the final answer DataFrame and check him\n",
     "answer =pd.concat([tst_id, tst_year.rename(\"year_as\"), reversed_df['month_as'],reversed_df['day_as'], reversed_df['hour_as'], reversed_df['min_as'], reversed_df['sec_as'], reversed_df['lat_as'],reversed_df['lon_as'],reversed_df['depth_as'],reversed_df['class_as']], axis=1)\n",
     "\n",
-    "answer.to_csv('E:\\\\Alex\\\\Github\\\\Forecast-of-Aftershocks\\\\answer.csv', index=False)\n",
+    "answer.to_csv('E:\\\\Alex\\\\Github\\\\my_projects\\\\Forecast-of-aftershock\\\\answer.csv', index=False)\n",
     "\n",
-    "ans = pd.read_csv('E:\\\\Alex\\\\Github\\\\Forecast-of-Aftershocks\\\\answer.csv')\n",
+    "ans = pd.read_csv('E:\\\\Alex\\\\Github\\\\my_projects\\\\Forecast-of-aftershock\\\\answer.csv')\n",
     "ans.head(10)"
    ]
   },
